--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="index_name">Kitty O'Brien Joyner</h1>
             </section>
             <div>
-                <img class="index_img" src="img/img1.jpg" alt="background image" title="engrenatges">
+                <img class="index_img" src="/img/img1.jpg" alt="background image" title="engrenatges">
             </div>
             <footer>
                 <ul>
